<resources>
    <string name="app_name">Get Off Your Phone</string>
    <string name="title">Get Off Your Phone</string>
    <string name="description">You can lock your selected apps using the options below</string>
    <string name="lock_button">LOCK SELECTED APPS !</string>
    <string name="system_wide_lock">SYSTEM LOCK-DOWN</string>
    <string name="start_by_swiping_left">Start by swiping left.</string>
    <string name="select_desired_state">Select Desired State.</string>
    <string name="select_desired_time">Select Desired Time.</string>

    <string name="time_left1">Time Left:&#160;</string>
    <string name="time_left2">Time left to unlock:&#160;</string>

    <string name="time_chosen">Time Chosen:&#160;</string>
    <string name="times">&#160;Times</string>
    <string name="app_open1">State:&#160;</string>
    <string name="app_open2">Selected State:&#160;</string>
    <string name="minutes">&#160;Minutes</string>
    <string name="hours">Hours:&#160;</string>
    <string name="state">\nState:&#160;</string>

    <string name="selected_time">Selected Time:&#160;</string>
    <string name="selected_state">Selected state:&#160;</string>
    <string name="selected_apps">Selected Apps:&#160;</string>

    <string name="open_times">+ Times</string>
    <string name="not_running">Lock Timer Not Running</string>
    <string name="dialog_description">v7.0r An App that simply tries to help you achieve a more-productive day; If it helped you, it would be greatly appreciated to leave a rating !</string>

    <string name="permission_check_title">Do you want to give usage permissions ?</string>
    <string name="permission_check_message">Without this permission, the app won\'t work</string>

    <string name="lockBT_dialog_title">Confirm selections ?</string>
    <string name="lockBT_dialog_message">You cannot change these settings until the timer ends!</string>

    <string name="toast_already_running">Timer already running, new selection ignored</string>
    <string name="toast_no_hour_selection">No hours selected</string>
    <string name="toast_no_state_selection">\nNo state selected</string>

    <string name="cafebar_error">Please select Desired Lock Time</string>
    <string name="cafebar_error2">Select at least 1 app to lock</string>
    <string name="cafebar_error3">Timer already running</string>
    <string name="cafebar_error4">Selections Cleared</string>
    <string name="cafebar_error5">Apps already selected, wait until timer ends</string>

    <string name="battery_dialog_title">Disable Battery Optimization?</string>
    <string name="battery_dialog_message">I STRONGLY RECOMMEND DISABLING THIS.\nAndroid System will kill the app after a short while if this is Enabled!</string>

    <string name="drawer_item1_text">Select Apps</string>
    <string name="drawer_item1_text2">Select which apps to lock</string>
    <string name="drawer_item6_text">Currently Selected Apps</string>
    <string name="drawer_item6_text2">Apps you\'ve already saved</string>
    <string name="drawer_item7_text">Settings</string>
    <string name="drawer_item7_text2">Application Settings &amp; Customization</string>
    <string name="drawer_item8_text">Donate</string>
    <string name="drawer_item8_text2">Not needed, but much appreciated!</string>
    <string name="drawer_header">Thank you for choosing GOYP &#10024;</string>

    <string name="app_selector_title">Select Apps: </string>
    <string name="app_selector_apply">Apply</string>
    <string name="app_selector_cancel">Cancel</string>
    <string name="app_selector_clear">Clear</string>

    <string name="drawer_item2_dialog_title">Help</string>
    <string name="drawer_item2_dialog_message">General Info:\n\n1- You CANNOT lock apps without selecting a timer\n2- You CAN lock apps without selecting a State\n3- App will close when you confirm lock down and a notification will show up\n4- You can dismiss the notification, and a "Timer Finished" notification will show when the lock-down is done\n\n______\n\n-Select Desired Time:\nThis option is where the magic happens, you select the desired time, which will be the duration of apps lock-down. After you select this, you cannot change it until lock-down is done. Please do not force close the app or you will have to clear app data.\n\n-Desired State:\nIf toggled on, it will turn off Wifi/Data for the remaining time of the lock-down and toggle it back when lock-down ends.\n\nThat\'s all !</string>
    <string name="drawer_item3_dialog_title">Recent Changes</string>
    <string name="drawer_item5_dialog_title">About</string>
    <string name="drawer_item5_dialog_message">Social Links Below</string>

    <string name="notification_title1">Click to open app</string>
    <string name="notification_title2">Lock-Down Finished !</string>
    <string name="notification_message">You can use your apps again</string>

    <string name="swipe_item1">Just a tiny bit of control, lock my apps for 30 minutes</string>
    <string name="swipe_item2">Quick and fast, lock my apps for 1 hour</string>
    <string name="swipe_item3">I need to finish a task that needs a bit of time, lock my apps for 2 hours</string>
    <string name="swipe_item4">HELP ME PLEASE!! Lock my apps for 3 hours !</string>

    <string name="swipe_item5">Turn WiFi Off</string>
    <string name="swipe_item6">Turn WiFi + Mobile Data Off</string>
    <string name="swipe_root_alert">&#160;Root Not Detected</string>

    <string name="custom_list_name">Name</string>
    <string name="custom_list_version">Version:&#160;</string>
    <string name="custom_list_title">Currently Selected Apps&#160;</string>
    <string name="custom_list_hint">(Click on apps for more info)</string>

    <string name="usage_dialog_message">Usage Today:&#160;</string>
    <string name="usage_dialog_title">App Info</string>
    <string name="usage_dialog_bt1">App Settings</string>
    <string name="usage_dialog_bt2">Launch App</string>

    <string name="privacy_element">Privacy Policy</string>
    <string name="FDroid_element">Get on F-Droid</string>

    <string name="Settings_title1">Notifications</string>
    <string name="Settings_title2">App UI</string>
    <string name="Settings_title3">Lock-Down options</string>
    <string name="Settings_title4">Information</string>
    <string name="Settings_title5">Links</string>
    <string name="Settings_item1_T">GOYP Notifications</string>
    <string name="Settings_item1_D">Show notifications of Start/End of lock-down</string>
    <string name="Settings_item2_T">Block Apps Notifications</string>
    <string name="Settings_item2_D">Block All Notifications (Android M+ ONLY)</string>
    <string name="Settings_item3_T">Light Theme</string>
    <string name="Settings_item3_D">Toggle on light app theme</string>
    <string name="Settings_item4_T">Reverse Timer</string>
    <string name="Settings_item4_D">Coming Soon</string>
    <string name="Settings_item5_T">Help</string>
    <string name="Settings_item5_D">Important usage info</string>
    <string name="Settings_item6_T">Recent Changes</string>
    <string name="Settings_item6_D">What\'s new in this release</string>
    <string name="Settings_item7_T">Libraries</string>
    <string name="Settings_item7_D">What i used to cook this app</string>
    <string name="Settings_item8_T">About Me</string>
    <string name="Settings_item8_D">Social Links</string>

    <string name="Settings_dialog1_T">Refresh App?</string>
    <string name="Settings_dialog1_D">You need to refresh for changes to take effect. \n\nProceed?</string>
    <string name="Settings_dialog2_T">Do Not Disturb Access</string>
    <string name="Settings_dialog2_D">DND Access is required for this option. \n\nProceed?</string>
    <string name="Settings_dialog3_T">WARNING</string>
    <string name="Settings_dialog3_D">Enabling this option will block ALL system notifications. This means you will not even get phone calls or alarms! This will turn off by itself after lock-down and you will receive all notifications at once. \n\nIf you force close the app you have to put alarm and phone call volume back on manually.</string>

    <string name="Toast_1">Notifications will be blocked after you start lock-down</string>


    <string name="changes">
    v7.0r (1.9.2019//1:08:55)\n\n[Fixed]\n- Timer service on reboot\n- Drawer screens navigation\n- Drawer Back Button\n\n[New]\n- Settings Screen\n- Light Theme\n- Ability to enable/disable timer notifications\n- Block ALL Phone notification with lock-down (DND)\n- Side Drawer\n- Donate Button\n\n[Updated]\n- Code (Formats, imports, comments)\n- Colours &amp; Styles\n- Deleted most of assets (smaller in size)\n\nThanks to everyone who helped in bugs/requests reporting &#128525;\n\n_______\n\nv6.1r (1.3.2019//1:55:24)\n\n[Fixed]\n- Midnight Timer increasing to 20+ hours by itself (Please leave a feedback whether this fix is working for you or not)\n- Fixed notifications selected time text (From 2 mins/Hours to Hours only or Minutes only)\n- Cleaned some unused strings\n\n[New]\n- Chinese translation by @Waining\n- Spanish Translation by @Makmm \n\n[Updated]\n- Dependencies and Libraries, supporting Android Pie SDK 28\n\nMore updates and feature requests coming soon! Happy New year &#128150;\n\n_______\n\nv6.0r (1.10.2018//16:28:08)\n\n[Fixed]\n- Critical Bug related to Timer-Done notification\n- Increased timeout of app close after lock-down start ( 2.5 seconds )\n- Notifications text\n- Usage stats Format + Algorithm\n\n[New]\n- App Icon ( Thanks to twingenious)\n- System-wide lockdown (Mobile Data lock needs ROOT)\n- Vibration pattern upon open of locked app\n\n[Removed]\n- Previous App Open Counter &amp; different lock screens\n\n_______\n\nv5.9r (18.9.2018//00:05:37)\n\n[NEW]\n\n- Daily usage per app (Press on an app in \"Selected Apps\" screen)\n- Privacy Policy link in About Me\n- F-Droid link in About Me\n\n[Announcment]\n\n- Next update will take sometime as i will implement user requested features &amp; reported bugs all at once, bare with me please!\n\nIf you want to contribute with translations, visit GitHub repo or Email me.\n\n_______\n\nv5.8r (12.9.2018//10:25:57)\n\n[NEW]\n\n- Currently selected apps ( Feature Request )\n\nNow you can check your selected apps without opening the app selector; you can also open specific app settings screen by clicking on it. ( This feature will get more updates such as Usage Time per App )\n\n[FIXED]\n\n- Some database values\n- Some UI Bugs\n\n_______\n\nv5.7r (10.9.2018//11:11:41)\n\n[FIXED]\n\n- OpenCounters changed from double digits to: 2,3,4,5\n\n[ANNOUNCEMENT]\n\n- GOYP is now on F-Droid!\n\n_______\n\nv5.6r (21.7.2018//10:40:31)\n\n[NEW]\n\n- You can now contribute to translations! Email me if you are interested in translating the app :)\n\n[Fixed]\n\n- Some of the selected apps disappearing (Thanks to a user bug report!)\n- Crash upon pressing on Bug Reporter (This has been completely removed)\n\n[Updated]\n\n- Multi Selector Library\n- Other dependancies\n- Playstore screenshots\n- Added support email in About\n- Added GitHub account in About\n\n\nThankyou for taking the time and leaving bug reports/feedback!\n\nHave a wonderful weekend!
    </string>
    <string name="Hours_v2">&#160;Hours</string>
</resources>
