<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/Settings_title1"
        android:textSize="40px" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="cb1"
        android:summary="@string/Settings_item1_D"
        android:title="@string/Settings_item1_T" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="cb2"
        android:summary="@string/Settings_item2_D"
        android:title="@string/Settings_item2_T" />

    <PreferenceCategory android:layout="@layout/divider"></PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Settings_title3"
        android:textSize="40px" />

    <Preference
        android:summary="@string/Settings_item4_D"
        android:title="@string/Settings_item4_T"
        android:key="ReverseTimer" />

    <PreferenceCategory android:layout="@layout/divider"></PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Settings_title2"
        android:textSize="40px" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="theme"
        android:summary="@string/Settings_item3_D"
        android:title="@string/Settings_item3_T" />

    <PreferenceCategory android:layout="@layout/divider"></PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Settings_title4"
        android:textSize="40px" />

    <Preference
        android:summary="@string/Settings_item5_D"
        android:title="@string/Settings_item5_T"
        android:key="help" />

    <Preference
        android:summary="@string/Settings_item6_D"
        android:title="@string/Settings_item6_T"
        android:key="recent_changes" />

    <PreferenceCategory android:layout="@layout/divider"></PreferenceCategory>

    <PreferenceCategory
        android:title="@string/Settings_title5"
        android:textSize="40px" />

    <Preference
        android:summary="@string/Settings_item7_D"
        android:title="@string/Settings_item7_T"
        android:key="libraries" />

    <Preference
        android:summary="@string/Settings_item8_D"
        android:title="@string/Settings_item8_T"
        android:key="about_me" />
    <!--<ListPreference-->
    <!--android:entries="@array/list_preference_entries"-->
    <!--android:entryValues="@array/list_preference_entries"-->
    <!--android:key="listPreference"-->
    <!--android:summary="list preference example summery explanation"-->
    <!--android:title="List Preference Example" />-->

    <!--<EditTextPreference-->
    <!--android:key="password"-->
    <!--android:summary="Set system password to protect your software"-->
    <!--android:title="System Password [Edit Text Preference]" />-->


</PreferenceScreen>