<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.nephi.getoffyourphone.MainActivity">

        <TextView
            android:id="@+id/title_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#DDDDDD" />

        <com.roughike.swipeselector.SwipeSelector
            android:id="@+id/hours_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:swipe_itemsXmlResource="@xml/items_size"
            app:swipe_unselectedItemDescription="@string/start_by_swiping_left"
            app:swipe_unselectedItemTitle="@string/select_desired_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#DDDDDD" />

        <com.roughike.swipeselector.SwipeSelector
            android:id="@+id/counter_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:swipe_itemsXmlResource="@xml/items_toppings"
            app:swipe_unselectedItemDescription="@string/start_by_swiping_left"
            app:swipe_unselectedItemTitle="@string/select_desired_state" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#DDDDDD" />

        <Button
            android:id="@+id/sendButton"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/blue"
            android:text="@string/lock_button"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>